# liesel-bctm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.qmd  pyproject.toml  setup.cfg
.github/workflows/: pre-commit.yml  pytest-pull.yml  pytest.yml
liesel_bctm/: __init__.py  __version__.py  builder.py  custom_types.py  dist.py  summary.py  tp_penalty.py
liesel_bctm/distreg/: __init__.py  builder.py  constraints.py  gibbs.py  mi_splines.py  node.py  psplines.py
liesel_bctm/experimental/: builder.py  mi_splines.py
liesel_bctm/liesel_internal/: lookup.py  splines.py
tests/: conftest.py  test_builder.py  test_dist.py  test_summary.py  test_tp_penalty.py
tests/distreg/: test_against_bctm.py  test_builder.py  test_gibbs.py  test_mi_splines.py  test_node.py  test_p_splines.py
tests/experimental/: test_builder.py  test_mi_splines.py
tests/files/: bctm_design_matrix.csv  bctm_knots1.csv  bctm_knots2.csv  bctm_penalty_x.csv  bctm_penalty_y.csv  bctm_reparam.csv  framingham.csv  run_model.py
