[project]
name = "liesel_bctm"
dynamic = ["version"]
description = "Bayesian Conditional Transformation Models in Liesel"
readme = "README.md"
authors = [
    { name = "Johannes Brachem" },
]
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["statistics", "machine-learning"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
]


requires-python = ">=3.13,<3.14"
dependencies = [
    "liesel>=0.4",
    "scikit-learn"
]

[project.urls]
Homepage = "https://liesel-project.org"
Documentation = "https://liesel-project.org"
Repository = "https://github.com/liesel-devs/liesel.git"


[dependency-groups]
dev = [
    "ruff>=0.11.7",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

pymc = ["pymc>=5.9"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
files = ["liesel_bctm", "tests"]
ignore_missing_imports = true
scripts_are_modules = true
disable_error_code = "annotation-unchecked"

[[tool.mypy.overrides]]
module = "jax.*"
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = "tests"
# turn warnings into errors and filter out specific warnings
filterwarnings = [
    "error",
    # "ignore::DeprecationWarning:tensorflow_probability",
    "ignore:jax.interpreters.xla.pytype_aval_mappings is deprecated:DeprecationWarning:tensorflow_probability.python.internal.backend.jax.ops",
    "ignore:shape requires ndarray or scalar arguments, got <class 'NoneType'> at position 0. In a future JAX release this will be an error.:DeprecationWarning:tensorflow_probability.python.internal.backend.jax.random_generators",
    "ignore:.*interactive_bk attribute was deprecated in Matplotlib 3.9.*:matplotlib._api.deprecation.MatplotlibDeprecationWarning",

    # Caused by the use in blackjax
    "ignore:JAXopt is no longer maintained:DeprecationWarning",
]

[tool.ruff.lint]
extend-select = [
    "F",  # pyflakes (flake8 core)
    "E",  # pycodestyle errors (flake8)
    "W",  # pycodestyle warnings (flake8)
    "I",  # isort (import sorting)
    "UP", # pyupgrade (modern syntax)
]

extend-ignore = []

[tool.hatch.version]
path = "liesel_bctm/__version__.py"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
