[metadata]
name = liesel_bctm
version = attr: liesel_bctm.__version__.__version__
description =placeholder
long_description = file: README.md, CHANGELOG.md, LICENSE.md
url = https://github.com/liesel-devs/liesel-bctm
author = Johannes Brachem
keywords = statistics, machine-learning
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.10
install_requires =
    liesel>=0.2.8
    scikit-learn

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pdoc
    pre-commit
    pytest
    pytest-cov
    pyupgrade

[flake8]
# make flake8 compatible with black
max-line-length = 90
extend-ignore = E203

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore::FutureWarning
    default:::liesel_bctm
